--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && (cd ../server && npm install)",
+    "build": "react-scripts build && npm install",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "heroku-postbuild": "react-scripts build"
